# poc-gProfile

./: .gitignore  Makefile  README.md  pyproject.toml
conda/: env.yaml
dummy_app/: __init__.py  run_first.py  run_second.py
