[tool.poetry]
name = "poc-gprofile"
version = "0.0.1"
description = ""
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
packages = [{include = "dummy_app"}]

[tool.poetry.dependencies]
python = "^3.11"
gprof2dot = "^2022.7.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
